         menu shortcuts optional and add desktop shortcut (patch #3069264)
         (Sergio Baldovi).
20100930 ChangeLog,fuse.c,man/fuse.1,README: first updates for a "1.0" release.
20101002 lib/{compressed,uncompressed}/*.szx: update libspectrum signature in
         each file so we know they don't have the A-F swap bug.
20101003 README: small update to mention WoS forums.
20101006 configure.in: update header check for XShm.h (patch #3081497) (Gergely
         Szasz).
20101006 ui/gtk/{gtkkeyboard.c,gtkui.c,statusbar.c,stock.c}: use F1 as shortcut
         to open menus, set window dialogs as transient for the main window and
         set a fixed width for the emulation speed display (patch #3081729)
         (Sergio Baldovi).
20101007 ui.c: don't close a disk or mdr if a write fails (patch #3058156)
         (thanks, Crisis) (Gergely Szasz).
20101007 ui/widget/query.c: fix colour of dialog Cancel entry and correct action
         returned when cancel is selected (patch #3083619) (Gergely Szasz).
20101009 disk/{beta.c,disk.[ch],opus.c,plusd.c},if1.c,machines/specplus3.c,
         man/fuse.1,menu.c,menu_data.dat,ui.c,ui/ui.h: change "Eject and write"
         menu items to "Save" and "Save as" (patch #3083639) (Gergely Szasz).
20101010 configure.in: pad version number for Win32 if needed (patch #3084574)
         (Sergio Baldovi).
20101011 ui/gtk/gtkdisplay.c: resize window when machine selection switches
         between Timex and non-Timex modes (fixes bug #3084862) (thanks, Phil)
         (Fred).
20101025 memory.c: writable_roms preference shouldn't affect the 16K machine
         "empty" page (thanks, Andrew Owen) (Fred).
20101029 man/fuse.1: some updates to bring things a bit more up to date (Fred).
20101102 man/fuse.1: remove reference to fixed issue in RZX playback command
         line ordering (patch #3100707) (Sergio Baldovi).
20101129 ui/fb/fbdisplay.c: only call fbdisplay_end() when display is
         initialised (fixes bug #3119382) (rkd77).